# 2DTools

./: CMakeLists.txt  LinearShapes.h  Matrix2D.h  Polygons.h  README.md  Vector2D.h  helper.h  main.cpp
Examples/: CMakeLists.txt
Examples/Distances/: CMakeLists.txt  main.cpp
Examples/LinearShapes/: CMakeLists.txt  main.cpp
Examples/Polygons/: CMakeLists.txt  main.cpp
Examples/VectorsMatrices/: CMakeLists.txt  main.cpp
include/2DTools/: Distances2D.hpp  Helper.hpp  LinearShapes.hpp  Matrix1D.hpp  Matrix2D.hpp  Polygons.hpp  Vector2D.hpp
include/2DTools/Distances/: Distances2D.hpp
include/2DTools/Math/: Matrix1D.hpp  Matrix2D.hpp  Vector2D.hpp
include/2DTools/Primitives/: LinearShapes.hpp  Polygons.hpp
includes/: Distances2D.h  LinearShapes.h  Matrix2D.h  Polygons.h  Vector2D.h  helper.h
test/: Tests.cpp
